force-app/main/default/objects/Presupuesto__c/Presupuesto__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para almacenar el presupuesto de venta del usuario por mes y canal de venta.</description>
    <label>Forecast</label>
    <nameField>
        <label>Nombre de Presupuesto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>