force-app/main/default/objects/Presupuesto__c/fields/IMP_CanalVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_CanalVentas__c</fullName>
    <label>Canal de ventas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>E-Commerce</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Mostrador</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Obras y Proyectos</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Distribuidores</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Des. Negocios</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Industriales</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Exportación</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Retail</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Ventas Directas</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Mayorista</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Otras Ventas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>