force-app/main/default/objects/Presupuesto__c/fields/IMP_CeBe__c.field-meta.xml
<CustomField>
    <fullName>IMP_CeBe__c</fullName>
    <description>Centro de Beneficio</description>
    <formula>IMP_Vendedor__r.CeBe__c</formula>
    <label>Ce Be</label>
    <type>Text</type>
</CustomField>