force-app/main/default/objects/Presupuesto__c/fields/IMP_FacturadoMes__c.field-meta.xml
<CustomField>
    <fullName>IMP_FacturadoMes__c</fullName>
    <label>Facturado en el mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>