force-app/main/default/objects/Presupuesto__c/fields/IMP_FaltanteParaCumplirMetaMensual__c.field-meta.xml
<CustomField>
    <fullName>IMP_FaltanteParaCumplirMetaMensual__c</fullName>
    <description>Campo calculado para obtener el faltante para cumplir meta mensual</description>
    <formula>IMP_Presupuesto__c  -  IMP_FacturadoMes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faltante para cumplir meta mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>