force-app/main/default/objects/Presupuesto__c/fields/IMP_Fecha__c.field-meta.xml
<CustomField>
    <fullName>IMP_Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>