force-app/main/default/objects/Presupuesto__c/fields/IMP_PorcCumplimientoEstimadoCierreMes__c.field-meta.xml
<CustomField>
    <fullName>IMP_PorcCumplimientoEstimadoCierreMes__c</fullName>
    <description>% Cumplimiento estimado cierre de mes</description>
    <formula>(  IMP_TotalEstimadoCierreMes__c * 100) /  IMP_Presupuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% cumplimiento estimado cierre de mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>