force-app/main/default/objects/Presupuesto__c/fields/IMP_PorcentajeCumplimiento__c.field-meta.xml
<CustomField>
    <fullName>IMP_PorcentajeCumplimiento__c</fullName>
    <formula>(IMP_FacturadoMes__c  * 100)  /  IMP_Presupuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% cumplimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>