force-app/main/default/objects/Presupuesto__c/fields/IMP_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>IMP_Presupuesto__c</fullName>
    <label>Presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>