force-app/main/default/objects/Presupuesto__c/fields/IMP_Region__c.field-meta.xml
<CustomField>
    <fullName>IMP_Region__c</fullName>
    <formula>Text (IMP_Vendedor__r.Equipo__c)</formula>
    <label>Región</label>
    <type>Text</type>
</CustomField>