force-app/main/default/objects/Presupuesto__c/fields/IMP_TotalEstimadoCierreMes__c.field-meta.xml
<CustomField>
    <fullName>IMP_TotalEstimadoCierreMes__c</fullName>
    <formula>IMP_FacturadoMes__c  +  IMP_TotalOportunidadesPorCerrar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total estimado cierre de mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>