force-app/main/default/objects/Presupuesto__c/fields/IMP_TotalOportunidadesPorCerrar__c.field-meta.xml
<CustomField>
    <fullName>IMP_TotalOportunidadesPorCerrar__c</fullName>
    <label>Total de oportunidades por cerrar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>