force-app/main/default/objects/Presupuesto__c/fields/IMP_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>IMP_Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Presupuestos</relationshipName>
    <type>Lookup</type>
</CustomField>