force-app/main/default/objects/Presupuesto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IMP_CanalVentas__c</columns>
    <columns>IMP_Fecha__c</columns>
    <columns>IMP_Presupuesto__c</columns>
    <columns>IMP_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>