force-app/main/default/objects/Presupuesto__c/listViews/Este_Mes.listView-meta.xml
<ListView>
    <fullName>Este_Mes</fullName>
    <columns>NAME</columns>
    <columns>IMP_Vendedor__c</columns>
    <columns>IMP_CanalVentas__c</columns>
    <columns>IMP_Fecha__c</columns>
    <columns>IMP_FacturadoMes__c</columns>
    <columns>IMP_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IMP_Fecha__c</field>
        <operation>equals</operation>
        <value>5/1/2023</value>
    </filters>
    <label>Este Mes</label>
</ListView>