force-app/main/default/objects/Presupuesto__c/listViews/Mis_Forecast.listView-meta.xml
<ListView>
    <fullName>Mis_Forecast</fullName>
    <columns>NAME</columns>
    <columns>IMP_CanalVentas__c</columns>
    <columns>IMP_FacturadoMes__c</columns>
    <columns>IMP_TotalOportunidadesPorCerrar__c</columns>
    <columns>IMP_Fecha__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Forecast</label>
</ListView>